@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-30T01:41:41Z",
-  "count_outdated" : 1902,
-  "uniques_outdated" : 1141,
-  "count" : 1914,
-  "uniques" : 1153,
+  "timestamp" : "2025-07-31T01:40:53Z",
+  "count_outdated" : 1903,
+  "uniques_outdated" : 1142,
+  "count" : 1915,
+  "uniques" : 1154,
   "clones" : [
-    {
-      "timestamp": "2025-07-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-18T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
