@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-07-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-07-18T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-07-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
